--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
 	    "php": ">=5.6",
         "symfony/process": "3.2.x-dev",
-	    "ralouphie/mimey": "^1.0"
+	    "ralouphie/mimey": "^1.0",
+        "fguillot/simple-queue": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
