--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 	    "php": ">=7.1",
 	    "ralouphie/mimey": "^2.1",
         "league/event": "^2.2",
-        "symfony/process": "^4.3"
+        "symfony/process": "^4.3",
+	    "psr/http-message": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
