--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
 		"Arhitector\\Transcoder\\Tests\\": "tests"
 	},
     "require": {
-	    "php": ">=7.1",
-	    "ralouphie/mimey": "^2.1",
-        "league/event": "^2.2",
-        "symfony/process": "^4.3",
-	    "psr/http-message": "~1.0"
-    },
+		"php": ">=7.1",
+		"league/event": "^2.2",
+		"psr/http-message": "~1.0",
+		"symfony/mime": "^4.3",
+		"symfony/process": "^4.3"
+	},
     "require-dev": {
         "phpunit/phpunit": "5.*"
     },
